--- a/sections/v-product-grid.liquid
+++ b/sections/v-product-grid.liquid
@@ -1,15 +1,6 @@
-{% comment %}
-  v-product-grid section
-  - Simple grid rendering products and hotspots.
-  - Removed Bonus Item Logic for a cleaner structure.
-{% endcomment %}
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-  href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Lustria&display=swap"
-  rel="stylesheet"
->
+<link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Lustria&display=swap" rel="stylesheet">
 
 <section class="v-section" id="v-grid-{{ section.id }}">
   <div class="v-container">
