--- a/sections/v-header.liquid
+++ b/sections/v-header.liquid
@@ -3,7 +3,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap" rel="stylesheet">
 
 <style>
-  .tisso-header-section {
+  .v-header {
     margin: 0;
     padding: 0;
     font-family: 'Jost', sans-serif;
@@ -197,7 +197,7 @@
   }
 </style>
 
-<div class="tisso-header-section">
+<div class="v-header">
 
   <div class="header-container" id="mainHeader">
     
