--- a/snippets/v-popup.liquid
+++ b/snippets/v-popup.liquid
@@ -235,6 +235,9 @@
     cursor: pointer;
     transition: all 0.2s;
     border-bottom: 1px solid #eee;
+    display: flex;
+    justify-content: center;
+    color: #000;
   }
 
   .custom-option-item:hover {
@@ -408,7 +411,7 @@
       }
     });
 
-    
+
     function openVPopup(e, blockId) {
       e.stopPropagation();
 
